# foodallergens

./: PUSH_MODELS_VIA_ADB.md  push-models.ps1  settings.gradle.kts
app/: build.gradle.kts  google-services.json
app/src/androidTest/java/edu/utem/ftmk/foodallergen/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: foodpreprocessed.xlsx
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/edu/utem/ftmk/foodallergen/: DashboardActivity.kt  DashboardFragment.kt  ExcelExporter.kt  ExcelReader.kt  FirebaseRepository.kt  FoodAdapter.kt  FoodData.kt  HostActivity.kt  InferenceMetrics.kt  MainActivity.kt  MemoryReader.kt  MetricsDataClasses.kt  PredictionFragment.kt
app/src/main/java/edu/utem/ftmk/foodallergen/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/res/drawable/: allergen_chip_background.xml  header_gradient.xml  ic_dashboard.xml  outlined_button.xml  outlined_button_ripple.xml  progress_gradient.xml  rounded_button_ripple.xml  spinner_background.xml
app/src/main/res/layout/: activity_dashboard.xml  activity_host.xml  activity_main.xml  fragment_dashboard.xml  fragment_prediction.xml  item_food.xml
app/src/main/res/menu/: bottom_nav_menu.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  themes.xml
app/src/test/java/edu/utem/ftmk/foodallergen/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
